Prevent properties panel overflow.

--- a/WebContent/styles/designer.css
+++ b/WebContent/styles/designer.css
@@ -433,7 +433,7 @@ div#propertiesPanel {
 	right: 0px;
 	top: 0px;
 	width: 200px;	
-	min-width: 200px;
+	min-width: 220px;
 	overflow: hidden;
 	padding: 0px 10px 20px 10px;
 	box-sizing: border-box;
